<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_90">


    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:background="@color/navy_blue_900"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_header_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/peyda_bold"
        android:gravity="center"
        android:text="@string/login_page"
        android:textColor="@color/white_90"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cv_session_result"
        app:layout_constraintTop_toTopOf="@id/view_header" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_session_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white_100"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/view_header"
        app:layout_constraintTop_toBottomOf="@id/view_header"
        app:strokeColor="@color/gold_300"
        app:strokeWidth="@dimen/_1sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/til_style"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/ic_person_bold"
                app:startIconTint="@color/navy_blue_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_100"
                    android:fontFamily="@font/peyda_regular"
                    android:gravity="center|right"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/til_style"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/navy_blue_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_100"
                    android:fontFamily="@font/peyda_regular"
                    android:gravity="center|right"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="@color/navy_blue_900"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/cv_session_result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_session_result"
        app:strokeColor="@color/gold_300"
        app:strokeWidth="@dimen/_1sdp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/peyda_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white_90"
            android:textSize="@dimen/_14ssp" />
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_call_navy_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/peyda_regular"
            android:text="@string/app_name"
            android:textColor="@color/navy_blue_900"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/ANODYNE"
            android:textColor="@color/navy_blue_900"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>