<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_90"
    tools:context=".activities.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/white_80"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/gold_300"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_session_title"
                    style="@style/tv_session_style"
                    android:text="@string/sample_title" />

                <TextView
                    android:id="@+id/tv_city"
                    style="@style/tv_session_style"
                    android:text="@string/sample_city" />

                <TextView
                    android:id="@+id/tv_area"
                    style="@style/tv_session_style"
                    android:text="@string/sample_area" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/tv_session_style"
                    android:text="شماره :\n ۰۹۱۵۵۴۳۳۴۲۱" />


            </LinearLayout>


            <ImageView
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:alpha="0.3"
                android:src="@drawable/bg_businessman"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_call"
        style="@style/cv_session_activity_style"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cv_result"
        app:layout_constraintTop_toBottomOf="@id/cv_profile"
        >

        <TextView
            android:id="@+id/tv_call"
           style="@style/btn_session_activity_style"
            android:text="@string/call"
             />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_result"
        style="@style/cv_session_activity_style"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cv_call"
        app:layout_constraintTop_toBottomOf="@id/cv_profile"
        >

        <TextView
            android:id="@+id/tv_result"
            style="@style/btn_session_activity_style"
            android:text="نتیجه جلسه"
            />
    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_session"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>


