<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/navy_blue_900"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_header_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_page"
        android:fontFamily="@font/peyda_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_2xlarge"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cv_login"
        app:layout_constraintTop_toTopOf="@id/view_header" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spade_middle"
        android:elevation="@dimen/spade_medium"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/spade_medium"
        app:cardElevation="@dimen/spade_large"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/view_header"
        app:layout_constraintTop_toBottomOf="@id/view_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spade_xlarge"
            android:layout_marginBottom="@dimen/spade_3xlarge"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spade_middle"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/ic_person_bold"
                app:startIconTint="@color/navy_blue_900"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_user_name"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/peyda_regular"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spade_middle"
                android:layout_marginTop="@dimen/spade_medium"
                android:hint="@string/password"

                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/navy_blue_900"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"

                    android:gravity="center|right"
                    android:fontFamily="@font/peyda_regular"
                    android:inputType="textVisiblePassword" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="@dimen/text_size_2xlarge"
        app:layout_constraintBottom_toBottomOf="@id/cv_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_login">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_shape"
            android:elevation="@dimen/spade_xlarge"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_2xlarge"
            android:fontFamily="@font/peyda_bold"
            app:layout_constraintBottom_toBottomOf="@id/cv_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_login" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spade_large"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_navy_blue" />

        <TextView
            android:id="@+id/partner_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/peyda_regular"
            android:layout_marginTop="@dimen/spade_medium"
            android:text="@string/partner"
            android:textColor="@color/navy_blue_900"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:id="@+id/powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spade_small"
            android:text="@string/ANODYNE"
            android:textColor="@color/navy_blue_900"

            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>