<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_90">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/navy_blue_900"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/peyda_bold"
        android:gravity="center"
        android:text="@string/meeting_result"
        android:textColor="@color/white_90"
        android:textSize="@dimen/text_size_Xlarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cv_login"
        app:layout_constraintTop_toTopOf="@id/view_header" />

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:layout_margin="10dp"
        android:elevation="@dimen/spade_medium"
        app:cardBackgroundColor="@color/white_100"
        app:cardCornerRadius="@dimen/spade_medium"
        app:cardElevation="@dimen/spade_xlarge"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/gold_300"
        app:strokeWidth="1dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_25sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spade_small"
                android:layout_marginBottom="@dimen/spade_xlarge"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/til_style"
                    android:hint="@string/agent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_agent"
                        style="@style/tie_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/til_style"
                    android:hint="@string/support_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_support_name"
                        style="@style/tie_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="20sp"
                    android:gravity="right|center"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_situation_drop_down"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:background="@drawable/bg_white_gold"
                        android:drawableStart="@drawable/ic_arrow_bottom"
                        android:fontFamily="@font/peyda_bold"
                        android:gravity="center"
                        android:paddingRight="10dp"
                        android:text="وضعیت"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.6"
                        android:gravity="center|right"
                        android:text="@string/situation"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:gravity="right"
                        android:text="۱ پایین ترین و ۱۰ بالاترین "
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_priority_drop_down"
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:background="@drawable/bg_white_gold"
                        android:drawableStart="@drawable/ic_arrow_bottom"
                        android:fontFamily="@font/peyda_bold"
                        android:gravity="center"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.6"
                        android:gravity="center|right"
                        android:text="@string/priority"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <EditText

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="YYYY"
                        android:inputType="number"

                        android:maxLength="4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:textSize="18sp" />

                    <EditText

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="MM"
                        android:inputType="number"

                        android:maxLength="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:textSize="18sp" />

                    <EditText

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:hint="DD"
                        android:inputType="number"
                        android:maxLength="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:gravity="right"
                        android:text="@string/date_meet"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:visibility="gone"
                    android:id="@+id/cl_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/til_style"
                        android:hint="@string/price"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_price"
                            style="@style/tie_style"
                            android:inputType="number"
                            android:paddingLeft="@dimen/_40sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:alpha="0.5"
                        android:text="@string/rial"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/til_style"
                        android:hint="@string/duratoin_meet"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"

                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_duration_meet"
                            style="@style/tie_style"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingLeft="@dimen/_40sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:alpha="0.5"
                        android:text="@string/minute"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/til_style"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_description"
                        style="@style/tie_style" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="@color/navy_blue_900"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/spade_2xlarge"
        app:layout_constraintBottom_toBottomOf="@id/cv_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_login"
        app:strokeColor="@color/gold_300"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/tv_submit_meet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/peyda_bold"
            android:gravity="center"
            android:text="@string/submit_result"
            android:textColor="@color/white_90"
            android:textSize="@dimen/text_size_Xlarge" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>